Create index.html for PVHS-Scanning-Software GitHub Pages

--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
         <h1>PVHS Scanning System</h1>
         <p>Upload an Excel File for Student Data and Then Scan the Student ID</p>
 
-        <!-- Excel file upload -->
+        <!-- Excel File Upload -->
         <form id="uploadForm" class="upload-form">
             <label for="fileUpload" class="file-label">Upload Student Data (Excel):</label>
             <input type="file" id="fileUpload" accept=".xlsx" class="file-input modern-input" />
         </form>
 
-        <!-- S Number input field for scanning -->
+        <!-- S Number Input Field for Scanning -->
         <form id="scanForm" class="scanner-form">
             <label for="sNumberInput" class="input-label">Scan S Number:</label>   
             <input type="text" id="sNumberInput" placeholder="Waiting for scan..." autofocus autocomplete="off" class="input-field modern-input" />
@@ -77,7 +77,7 @@
         <button id="downloadExcelBtn" class="advanced-btn small-btn">Download Updated Excel</button>
     </div>
 
-    <!-- Fullscreen modal for student info -->
+    <!-- Fullscreen Modal for Student Information -->
     <div id="fullscreenModal" class="fullscreen-modal">
         <div class="fullscreen-content">  
             <h1 id="studentFullName"></h1>
