--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>  
-    <!-- Login Form -->
+    <!-- Login Form -->,
     <div id="loginContainer" class="login-container">
         <div class="login-card">
             <h2>Login to PVHS Scanning System</h2>
@@ -44,8 +44,9 @@
         </form>
 
         <!-- Unified Search Filter -->
-        <div class="filter-container">
-            <input type="text" id="filterInput" placeholder="Search by Name, Seat, Lab" class="modern-input">
+        <div class="filter-container" style="text-align: center;"> 
+            <label for="filterInput">Filter Data:</label>
+            <input type="text" id="filterInput" placeholder="Filter by Name..." class="modern-input" style="margin-top: 10px;"> 
         </div>
 
         <!-- Action Buttons Below the Filter -->
